// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeEditorElement do not add children 1`] = `
Object {
  "children": Array [],
  "id": "29",
}
`;

exports[`normalizeEditorElement do not remove children 1`] = `
Object {
  "children": Array [],
  "id": "30",
}
`;

exports[`normalizeEditorElement do not remove children 2`] = `
Object {
  "children": Array [
    Object {
      "id": "32",
      "text": "",
    },
  ],
  "id": "31",
}
`;

exports[`normalizeEditorElement do not remove children 3`] = `
Object {
  "children": Array [
    Object {
      "id": "34",
      "text": ".",
    },
  ],
  "id": "33",
}
`;

exports[`normalizeEditorElement merges adjacent strings 1`] = `
Object {
  "children": Array [
    Object {
      "id": "1",
      "text": "ab",
    },
    Object {
      "children": Array [
        Object {
          "id": "4",
          "text": "abc",
        },
        Object {
          "children": Array [
            Object {
              "id": "8",
              "text": "a",
            },
            Object {
              "children": Array [],
              "id": "9",
            },
            Object {
              "id": "10",
              "text": "bc",
            },
          ],
          "id": "7",
        },
      ],
      "id": "3",
    },
    Object {
      "id": "12",
      "text": "a",
    },
    Object {
      "id": "13",
      "text": "",
    },
    Object {
      "id": "14",
      "text": "b",
    },
  ],
  "id": "0",
}
`;
